# grasp

./: .eslintrc.js  .gitignore  LICENSE.md  README.md  TESTING.org  TODO.org  build  build_extension  conftest.py  package.json  publish  pyproject.toml  pytest.ini  quicktest  ruff.toml  server  server.py  setup.py  tox.ini  webpack.config.js
.ci/: run
.circleci/: config.yml
.github/workflows/: main.yml
ci/: mypy  pylint  pytest
doc/: DEVELOPMENT.org
extension/: .eslintrc.js  .flowconfig  README.md  babel.config.js  build  eslint.config.js  generate_manifest.js  package.json  publish  rollup.config.js  tsconfig.json  webpack.config.js
extension/.ci/: build
extension/flow-typed/: webextension-polyfill.js
extension/src/: background.ts  common.ts  detect_dark_mode.ts  manifest.json  options.html  options.ts  options_page.ts  permissions.ts  popup.html  popup.ts  selenium_bridge.js
extension/src/js/: OptionsPage.svelte  background.js  browser_types.js  common.js  options.js  options_page.js  permissions.js  popup.js
extension/tests/: dummy.test.js
misc/: config.py.example
server/: ci.sh  config.py  grasp_server.py  org_tools.py  run  server.py  setup  test_all.py  test_grasp.py  test_with_browser.py
src/: manifest.json  options.html  popup.html
src/grasp_backend/: __init__.pyi  __main__.py  org_tools.py  setup.py
src/grasp_backend/tests/: test_backend.py  utils.py
src/js/: background.js  common.js  config.js  options.js  options_page.js  permissions.js  popup.js
src/js/popup/: example.js
tests/: addon.py  addon_helper.py  common.py  conftest.py  test_end2end.py  utils.py  webdriver_utils.py
utils/: env.js
