# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "grasp_backend"
dependencies = [
]
requires-python = ">=3.12"
## these need to be set if you're planning to upload to pypi
# description = "TODO"
license = {file = "LICENSE.md"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
# keywords = []
# # see: http://pypi.python.org/pypi?%3Aaction=list_classifiers
# classifiers = [
# ]


[project.urls]
Homepage = "https://github.com/karlicoss/grasp"
##


[project.optional-dependencies]
[dependency-groups]
testing = [
    "pytest>=9",  # need version 9 for proper namespace package support
    "ruff",
    "requests",  # for backend tests
    "psutil",  # for backend tests
]
end2end = [
    { include-group = "testing" },

    "selenium",
    "loguru",
    "click",

    "pyautogui",
]
typecheck = [
    { include-group = "testing" },
    { include-group = "end2end" },
    "mypy",
    "lxml", # for mypy html coverage
    "ty>=0.0.3",

    "types-requests",
    "types-psutil",
    "types-PyAutoGUI",
]


[project.scripts]
grasp_backend = 'grasp_backend.__main__:main'

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/grasp_backend"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"
