# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "grasp_backend"
dependencies = [
]
requires-python = ">=3.12"

## these are only useful for pypi
description = "Backend for grasp browser extension"
license     = {file = "LICENSE"}
authors     = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]
maintainers = [{name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"}]

[project.urls]
Homepage = "https://github.com/karlicoss/grasp"
##


[project.optional-dependencies]
[dependency-groups]
testing = [
    "pytest>=9",  # need version 9 for proper namespace package support
    "ruff",
    "requests",  # for backend tests
    "psutil",  # for backend tests
]
end2end = [
    { include-group = "testing" },

    "selenium",   # browser automations
    "loguru",     # used in addon_helper... not sure if should just use promnesia's logger?
    "click",      # confirmations for end2end test
    "pyautogui",  # for keyboard automation during end2end tests
    "ipdb"     ,  # optional but a bit nicer for breakpoints

    "pytest-timeout",  # for PYTEST_TIMEOUT env variable
    "pytest-xdist"  ,  # not used atm, but helpful to parallelise end2end tests
    "pytest-repeat" ,  # helpful to debug flaky tests
]
typecheck = [
    { include-group = "testing" },
    { include-group = "end2end" },
    "mypy",
    "lxml", # for mypy html coverage
    "ty>=0.0.8",

    "types-requests",
    "types-psutil",
    "types-PyAutoGUI",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/grasp_backend"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"


[project.scripts]
grasp_backend = 'grasp_backend.__main__:main'
